禁用live2d 与busuanzi bug冲突

--- a/_config.yml
+++ b/_config.yml
@@ -157,7 +157,7 @@ search:
 
 # 吉祥物挂件 npm install -save hexo-helper-live2d
 live2d:
-  enable: true
+  enable: false
   scriptFrom: local
   pluginRootPath: live2dw/
   pluginJsPath: lib/
