--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,8 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/swimminghao/swimminghao.github.io.git
+#  repo: https://github.com/swimminghao/swimminghao.github.io.git
+  repo: git@github.com:swimminghao/swimminghao.github.io.git
   branch: master
 
 search:
